--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,73 +32,76 @@
       <!-- Timeblocks go here -->
       <div class="row time-block" data-hour="9">
         <div class="col-2 col-lg-1 hour">9 am</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-9"></textarea>
           <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
             <i class="fas fa-save"></i>
           </button>
       </div>
       <div class="row time-block" data-hour="10">
         <div class="col-2 col-lg-1 hour">10 am</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-10"></textarea>
         <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row time-block" data-hour="11">
         <div class="col-2 col-lg-1 hour">11 am</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-11"></textarea>
         <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row time-block" data-hour="12">
         <div class="col-2 col-lg-1 hour">12 pm</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-12"></textarea>
         <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row time-block" data-hour="13">
         <div class="col-2 col-lg-1 hour">1 pm</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-13"></textarea>
         <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row time-block" data-hour="14">
         <div class="col-2 col-lg-1 hour">2 pm</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-14"></textarea>
         <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row time-block" data-hour="15">
         <div class="col-2 col-lg-1 hour">3 pm</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-15"></textarea>
         <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row time-block" data-hour="16">
         <div class="col-2 col-lg-1 hour">4 pm</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-16"></textarea>
         <button class=" col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
       <div class="row time-block" data-hour="17">
         <div class="col-2 col-lg-1 hour">5 pm</div>
-        <textarea class="col-8 col-lg-10"></textarea>
+        <textarea class="col-8 col-lg-10" id="hour-17"></textarea>
         <button class="col-2 col-lg-1 btn btn-block saveBtn d-flex justify-content-center align-items-center">
           <i class="fas fa-save"></i>
         </button>
       </div>
     </div>
+    <button class="testBtn">Test</button>
 </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script scr="script.js"></script>
+    <script>moment().format()</script>
+    <!-- <script scr="script.js"></script>
+    <link href="script.js" /> -->
     <script src="./script.js"></script>
   </body>
 </html>
